<resources>
    <string name="app_name">Posyandu</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registrasi">Registrasi</string>
    <string name="nik">NIK</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="password">Password</string>
    <string name="halaman_login">Halaman Login</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun_registrasi">Belum Punya Akun? Registrasi</string>
    <string name="info_akun">Info Akun</string>
    <string name="isi_nama_lengkap">Isi Nama Lengkap</string>
    <string name="isi_nik">Isi NIK</string>
    <string name="role">Role</string>
    <string name="isi_role">Isi Role</string>
    <string name="logout">Logout</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="antrian">Antrian</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="status_antrian">Status Antrian</string>
    <string name="no_antrian">No. Antrian</string>
    <string name="buat_antrian">Buat Antrian</string>
    <string name="tanggalAntrian">12:59, 29-01-2023</string>
    <string name="tidak_ada_antrian">Tidak ada Antrian</string>
    <string name="batalkan">Batalkan</string>
    <string name="selesai">Selesai</string>
    <string name="pending">Pending</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading...</string>
    <string name="hapus_semua_antrian">Hapus Semua Antrian</string>
</resources>