<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:id="@+id/leftColumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/noAntrianTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_antrian"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/namaLengkapTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nama_lengkap"
            android:textColor="#333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/statusAntrianTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status_antrian"
            android:textColor="#333333"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentRight="true">

        <Button
            android:id="@+id/pendingkan_antrian_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:backgroundTint="@color/yellow"
            android:textSize="13sp"
            android:text="@string/pending" />

        <Button
            android:id="@+id/selesaikan_antrian_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:backgroundTint="@color/blue"
            android:textSize="13sp"
            android:text="@string/selesai" />

        <Button
            android:id="@+id/batalkan_antrian_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:backgroundTint="@color/red"
            android:textSize="13sp"
            android:text="@string/batalkan" />

    </LinearLayout>

</RelativeLayout>
